# Breakout.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build_all.bat  manual_build.bat  run.bat
assets/shaders/: circle.frag  circle.geom  circle.vert  debug.vert  full_screen.frag  full_screen.vert  lighting.frag  quad.frag  quad.geom  quad.vert  skybox.vert  triangle.frag  triangle.vert  voxel.frag  voxel.geom
assets/shaders/2D/: circle.frag  circle.vert  quad.vert
assets/shaders/3D/: lighting.frag  shadow_triangle.vert  shadow_voxel.geom  skybox.frag  triangle.frag  triangle.vert  voxel.frag  voxel.geom  voxel.vert  voxel2.frag  voxel2.vert
dependencies/glad/include/glad/: gl.h
src/: Breakout.cpp  Breakout.hpp  CMakeLists.txt  Example3D.hpp  main.cpp
src/Scene/: AbstractScene.hpp  Components.cpp  Components.hpp  Entity.hpp  Scene2D.hpp  Scene3D.hpp  callbacks.hpp  camera.hpp
src/Scene/camera/: Camera2D.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp  OrthographicCamera.hpp  camera_core.hpp
src/apps/: Breakout.hpp  Example3D.hpp  VoxelExample.hpp
src/core/: Application.cpp  Application.hpp  EventEnums.hpp  Events.cpp  Events.hpp  logging.hpp  print.hpp  tracking.hpp
src/opengl/: GLBufferLayout.hpp  GLFramebuffer.hpp  GLShader.cpp  GLShader.hpp  GLTexture.cpp  GLTexture.hpp  GLTypeConvert.hpp  GLVertexArray.cpp  GLVertexArray.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp  Window.cpp  Window.hpp
src/physics/: BoundingBox2D.cpp  BoundingBox2D.hpp  Motion.hpp  Physics.hpp  Physics2D.cpp  Physics2D.hpp
src/renderer/: AbstractRenderer.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Skybox.cpp  Skybox.hpp  TextureAtlas.hpp  VoxelRenderer.cpp  VoxelRenderer.hpp  VoxelRenderer2.hpp  physics.hpp
src/renderer/camera/: FirstPersonCamera.cpp  OrthographicCamera.hpp  camera_core.hpp
src/renderer/physics/: BoundingBox2D.cpp  BoundingBox2D.hpp
src/renderer/renderer/: Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  components.cpp  components.hpp  entity.hpp
